# Generated by Django 5.2.2 on 2025-06-07 09:54

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('core', '0002_alter_address_city_alter_address_country_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='KhachHang',
            fields=[
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Ngày tạo')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Ngày cập nhật')),
                ('is_active', models.BooleanField(default=True, verbose_name='Kích hoạt')),
                ('ma_kh', models.CharField(max_length=20, primary_key=True, serialize=False, unique=True, verbose_name='Mã khách hàng')),
                ('ho_ten', models.CharField(max_length=100, verbose_name='Họ và tên')),
                ('ngay_sinh', models.DateField(verbose_name='Ngày sinh')),
                ('gioi_tinh', models.CharField(choices=[('nam', 'Nam'), ('nu', 'Nữ'), ('khac', 'Khác')], default='nam', max_length=10, verbose_name='Giới tính')),
                ('so_cmnd', models.CharField(max_length=20, unique=True, verbose_name='Số CMND/CCCD')),
                ('ngay_cap_cmnd', models.DateField(verbose_name='Ngày cấp CMND/CCCD')),
                ('noi_cap_cmnd', models.CharField(max_length=100, verbose_name='Nơi cấp CMND/CCCD')),
                ('so_dien_thoai', models.CharField(max_length=20, verbose_name='Số điện thoại')),
                ('email', models.EmailField(max_length=254, verbose_name='Email')),
                ('nghe_nghiep', models.CharField(blank=True, max_length=100, verbose_name='Nghề nghiệp')),
                ('noi_lam_viec', models.CharField(blank=True, max_length=200, verbose_name='Nơi làm việc')),
                ('thu_nhap_hang_thang', models.DecimalField(blank=True, decimal_places=2, max_digits=15, null=True, verbose_name='Thu nhập hàng tháng')),
                ('trang_thai', models.CharField(choices=[('hoat_dong', 'Hoạt động'), ('tam_dung', 'Tạm dừng'), ('khoa', 'Khóa')], default='hoat_dong', max_length=20, verbose_name='Trạng thái')),
                ('ngay_dang_ky', models.DateTimeField(auto_now_add=True, verbose_name='Ngày đăng ký')),
                ('ten_nguoi_thu_huong', models.CharField(blank=True, max_length=100, verbose_name='Tên người thụ hưởng')),
                ('quan_he_nguoi_thu_huong', models.CharField(blank=True, max_length=50, verbose_name='Quan hệ với người thụ hưởng')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_created', to=settings.AUTH_USER_MODEL, verbose_name='Người tạo')),
                ('dia_chi', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='core.address', verbose_name='Địa chỉ')),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='%(class)s_updated', to=settings.AUTH_USER_MODEL, verbose_name='Người cập nhật')),
                ('user', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='khach_hang', to=settings.AUTH_USER_MODEL, verbose_name='Tài khoản người dùng')),
            ],
            options={
                'verbose_name': 'Khách hàng',
                'verbose_name_plural': 'Khách hàng',
                'db_table': 'khach_hang',
                'ordering': ['-ngay_dang_ky'],
            },
        ),
    ]
